# digital-signal-processing

./: .gitignore  CMakeLists.txt  README.md  main.cpp  run-plotter.cmd  run-plotter.sh
autocorrelation_function/: CMakeLists.txt
autocorrelation_function/headers/: autocorrelation_function.h  fft_autocorrelation_function.h  ring_shift_function.h
autocorrelation_function/src/: fft_autocorrelation_function.cpp  ring_shift_function.cpp
cli/: CMakeLists.txt
cli/headers/: cli.h  option.h
cli/src/: cli.cpp
distribution_function/: CMakeLists.txt
distribution_function/headers/: distribution_function.h
distribution_function/src/: distribution_function.cpp
filter/: CMakeLists.txt
filter/headers/: windowing_filter.h
filter/src/: windowing_filter.cpp
generator/: CMakeLists.txt
generator/headers/: noise_generator.h  noise_signal_function.h  signal_function.h  signal_generate.h  signal_generator.h
generator/src/: noise_generator.cpp  signal_generate.cpp
math/: CMakeLists.txt
math/headers/: math_tools.h
math/src/: math_tools.cpp
plotters/: CMakeLists.txt  plotter.py
plotters/files/: autocorrelation.txt  distribution_function.txt  filter.txt  result.txt  signal.txt
plotters/headers/: plotter.h
plotters/src/: plotter.cpp
